Added a very nice portfolios display.

--- a/static/createPortfolio/createPortfolio.html
+++ b/static/createPortfolio/createPortfolio.html
@@ -19,15 +19,15 @@
     </div>
     <div class="createPortfolio-container">
         <form class="createPortfolio-form" id="createPortfolio-form">
-            <h2>Login to your account</h2>
+            <h2>Create portfolio</h2>
             <div class="form-group">
                 <label for="text">Portfolio name</label>
                 <input type="text" id="name" name="name" placeholder="Portfolio name" required>
             </div>
             <button id="createPortfolio-button" type="submit" class="createPortfolio-btn">Create Portfolio</button>
         </form>
-        <div>
-            <script src="createPortfolio/createPortfolio.js"></script>
+    </div>
+    <script src="createPortfolio/createPortfolio.js"></script>
 </body>
 
 </html>
